# JHS-EncoderReader

./: .gitignore  LICENSE  README.md  jhs-encoderreader-metro-whoami.maxpat  main.py  main_simulation.py  pyproject.toml  requirements.txt
config/: settings.json
modbus_encoder/: __init__.py
modbus_encoder/controllers/: __init__.py  encoder_controller.py  gpio_controller.py  main_controller.py
modbus_encoder/hardware/: gpio.py
modbus_encoder/modbus/: client.py  crc.py  registers.py
modbus_encoder/network/: osc_server.py
modbus_encoder/utils/: address_handler.py  cli.py  config.py  error_handling.py  monitoring.py  resource_manager.py
